--- a/PEViewPlus/mainwindow.ui
+++ b/PEViewPlus/mainwindow.ui
@@ -17,35 +17,19 @@
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
-      <x>21</x>
-      <y>41</y>
+      <x>80</x>
+      <y>60</y>
       <width>512</width>
       <height>192</height>
      </rect>
     </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-      <horstretch>1</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
-    <widget class="QTreeView" name="treeView">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>1</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-    <widget class="QListView" name="listView">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>4</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <widget class="QTreeView" name="treeView"/>
+    <widget class="QTableView" name="tableView">
+     <property name="styleSheet">
+      <string notr="true">font: 75 10pt &quot;Consolas&quot;;</string>
      </property>
     </widget>
    </widget>
@@ -72,13 +56,14 @@
     <property name="title">
      <string>View</string>
     </property>
-    <addaction name="actionToolbar"/>
+    <addaction name="actionDisassembly"/>
    </widget>
    <widget class="QMenu" name="menuHel">
     <property name="title">
      <string>Help</string>
     </property>
     <addaction name="actionAbout"/>
+    <addaction name="actionAboutQt"/>
    </widget>
    <widget class="QMenu" name="menuOption">
     <property name="title">
@@ -145,6 +130,16 @@
   <action name="actionFont">
    <property name="text">
     <string>Fonts</string>
+   </property>
+  </action>
+  <action name="actionDisassembly">
+   <property name="text">
+    <string>Decompiler</string>
+   </property>
+  </action>
+  <action name="actionAboutQt">
+   <property name="text">
+    <string>AboutQt</string>
    </property>
   </action>
  </widget>
