删除反汇编的dll调用、添加32位64位反汇编及其显示界面

--- a/PEViewPlus/mainwindow.ui
+++ b/PEViewPlus/mainwindow.ui
@@ -121,6 +121,9 @@
    <property name="text">
     <string>Open</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
   </action>
   <action name="actionAbout">
    <property name="text">
