整合PE文件注入、可实现32位、64位程序下的32位、64位PE文件注入，修复PE文件类型判断BUG

--- a/PEViewPlus/mainwindow.ui
+++ b/PEViewPlus/mainwindow.ui
@@ -67,7 +67,7 @@
    </widget>
    <widget class="QMenu" name="menuOption">
     <property name="title">
-     <string>Option</string>
+     <string>Action</string>
     </property>
     <addaction name="actionFont"/>
    </widget>
@@ -132,7 +132,7 @@
   </action>
   <action name="actionFont">
    <property name="text">
-    <string>Fonts</string>
+    <string>PEInject</string>
    </property>
   </action>
   <action name="actionDisassembly">
